@@ -8,7 +8,15 @@ has no_cpan => (
   is      => 'ro',
   isa     => 'Bool',
   lazy    => 1,
-  default => sub { $ENV{NO_CPAN} || $_[0]->payload->{no_cpan} }
+  default => sub { $ENV{NO_CPAN} || $_[0]->payload->{no_cpan} || 0 }
+);
+
+# major version number to help skip legacy versions
+has major_version => (
+    is  => 'ro',
+    isa => 'Str',
+    lazy => 1,
+    default => sub { $ENV{M} || $_[0]->payload->{major_version} || 1 }
 );
 
 sub configure {
@@ -32,8 +40,11 @@ sub configure {
 
     $self->add_bundle('@Filter' => \%basic_opts);
 
+    $self->add_plugins([ 'AutoVersion' => {
+        'major' => $self->major_version
+    }]);
+
     $self->add_plugins(qw/
-        AutoVersion
         NextRelease
         PkgVersion
         PickyPodWeaver
@@ -131,6 +142,9 @@ to those files containing an C<ABSTRACT> statement.
 If you provide the C<no_cpan> option with a true value to the bundle, or set
 the environment variable C<NO_CPAN> to a true value, then the upload to CPAN
 will be suppressed.
+
+If you provide a value to the C<major_version> option then it will be passed
+to the C<AutoVersion> Plugin (as the C<major> attribute).
 
 =head1 TIPS
 
