@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Add major_version configuration option for AutoVersion major
+
 1.103620  2010-12-28 00:13:22 Europe/London
 
   * Skip addition of POD to any file not containing ABSTRACT statement.
